# LivePlayer

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-lib.h
app/src/main/java/com/example/liveplayer/: MainActivity.java
app/src/main/java/com/example/liveplayer/rtsp/: Client.java  NavRtspCallBack.java
app/src/main/java/com/example/liveplayer/view/: PlayerView.java
app/src/main/res/drawable/: ic_v_g.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
